deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aurealize-cards
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aurealize-cards
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
