deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurealize-cards
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: aurealize.aureal.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aurealize-cards
                port:
                  number: 80
